--- a/helm-chart/values-local-noproxy.yaml
+++ b/helm-chart/values-local-noproxy.yaml
@@ -22,3 +22,8 @@ api:
   image: "leetcode-executor"
   tag: "latest"
   imagePullPolicy: "IfNotPresent"
+  nodeport: "30090"
+secrets:
+  SWR_LOGIN_P: ""
+  SWR_LOGIN_U: ""
+  dockerconfigjson: ""
